--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,7 +1,40 @@
 <p id="notice"><%= notice %></p>
-
+<%= @recipe.created_at %>
+<%= @recipe.updated_at %>
+<%= @recipe.glasses_distance_od_esf %>
+<%= @recipe.glasses_distance_od_cil %>
+<%= @recipe.glasses_distance_od_eje %>
+<%= @recipe.glasses_distance_od_prisma %>
+<%= @recipe.glasses_distance_oi_esf %>
+<%= @recipe.glasses_distance_oi_cil %>
+<%= @recipe.glasses_distance_oi_eje %>
+<%= @recipe.glasses_distance_oi_prisma %>
+<%= @recipe.glasses_near_od_esf %>
+<%= @recipe.glasses_near_od_cil %>
+<%= @recipe.glasses_near_od_eje %>
+<%= @recipe.glasses_near_od_prisma %>
+<%= @recipe.glasses_near_oi_esf %>
+<%= @recipe.glasses_near_oi_cil %>
+<%= @recipe.glasses_near_oi_eje %>
+<%= @recipe.glasses_near_oi_prisma %>
+<%= @recipe.obs %>
+<%= @recipe.di %>
+<%= @recipe.pte %>
+<%= @recipe.cal %>
+<%= @recipe.high_ring %>
+<%= @recipe.high_multifocal %>
+<%= @recipe.diagonal %>
+<%= @recipe.bifocal %>
+<%= @recipe.multifocal %>
+<%= @recipe.organic %>
+<%= @recipe.price %>
+<%= @recipe.cash_delivery %>
+<%= @recipe.cash_balance %>
 <%= @recipe.first_name %>
 <%= @recipe.last_name %>
+<%= @recipe.phone %>
+<%= @recipe.mail %>
+<%= @recipe.birthday %>
 <br />
 <%= link_to 'Edit', edit_recipe_path(@recipe) %> |
 <%= link_to 'Back', recipes_path %>
